# sns_events

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json
.github/workflows/: branch-source-check.yml
.husky/: pre-commit
candid/: canister.did  child.did  parent.did
frontend/canister/: canister.did.d.ts  canister.did.js  index.js
frontend/child/: child.did.d.ts  child.did.js  index.d.ts  index.js
frontend/parent/: index.d.ts  index.js  parent.did.d.ts  parent.did.js
scripts/: deploy_local.sh  generate.sh
src/: Cargo.toml
src/canister/: Cargo.toml
src/canister/src/: lib.rs
src/canister/src/logic/: default_methods.rs  event_methods.rs  generate_did.rs  store.rs
src/canister/src/models/: event_models.rs
src/child/: Cargo.toml
src/child/src/: backup.rs  default.rs  lib.rs  methods.rs  read_stores.rs  stable_backup.rs  store.rs  validate.rs
src/parent/: Cargo.toml
src/parent/src/: default.rs  default_methods.rs  event_methods.rs  lib.rs  methods.rs  scalable_methods.rs  store.rs
src/shared/: Cargo.toml
src/shared/src/: event_models.rs  lib.rs
wasm/: canister.wasm  child.wasm  demo_child_canister.wasm  parent.wasm
