[package]
name = "event"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["lib"]

[dependencies]
parent = { path = "parent"}
child = { path = "child"}
shared = { path = "shared"}

[dev-dependencies]
cargo-husky = "1.5.0"
