[package]
name = "child"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[[test]]
name="generate"
path = "src/lib.rs"

[dependencies]
candid = "0.9.8"
ic-cdk = "0.11.0"
serde = "1.0"
byteorder = "1.4.3"
serde_json = "1.0"
ciborium = "0.2.1"

# These dependencies are required
ic_scalable_canister = "0.3.0-beta.13"
ic-stable-structures = "0.6.0"
ic_canister_backup = "0.0.4"
shared = { path = "../shared" }

