[package]
name = "child"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.8"
ic-cdk = "0.11.0"
serde = "1.0"
byteorder = "1.4.3"
serde_json = "1.0"
ciborium = "0.2.1"
serde_cbor = "0.11.2"

# These dependencies are required
ic_canister_backup = "0.0.10"
ic_scalable_canister = "0.3.1"
ic-stable-structures = "0.6.0"
shared = { path = "../shared" }
