[package]
name = "parent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[[test]]
name="generate"
path = "src/lib.rs"

[dependencies]
ic-cdk = "0.11.0"
candid = "0.9.8"
serde = "1.0"
ic_scalable_misc = "1.0.1-beta.2"
shared = { path = "../shared" }
ic-cdk-timers = "0.4.0"