[package]
name = "parent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.11.0"
candid = "0.9.8"
serde = "1.0"
ic_scalable_canister = "0.3.1"
shared = { path = "../shared" }
ic-cdk-timers = "0.4.0"