[package]
name = "shared"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
candid = "0.9.8"
ic_scalable_misc = "1.0.1-beta.0"
serde = "1.0"
ic-stable-structures = "0.6.0-beta.1"